<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Config">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout

            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_marginRight="6dp"
                android:textSize="24dp"
                android:text="@string/novo_usuario" />

            <EditText
                android:id="@+id/inputUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/digite_o_usuario"
                />

        </LinearLayout>

        <LinearLayout

            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_weight="1"
                android:textSize="24dp"
                android:layout_marginRight="22dp"
                android:text="@string/nova" />

            <EditText
                android:id="@+id/inputSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:password="true"


                android:inputType="textPersonName"
                android:hint="@string/digite_a_senha"
                />

        </LinearLayout>
        <LinearLayout

            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:text="@string/confirmar_a_senha"
                android:textColor="#000"
                android:textSize="24dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputConfirmarSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:password="true"

                android:hint="@string/digite_a_senha"
                android:inputType="textPersonName" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="200dp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmar"
                android:onClick="confirmar"
                android:textSize="22dp"
                android:layout_marginRight="100dp"
                />
            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:onClick="limparCampos"
                android:text="@string/cancelar"
                />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>